# mining-rights-daily-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  RUN.md  docker-compose.yml  mcp-config.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml
agent/: __init__.py  __main__.py  orchestrator.py
common/: http.py  models.py
docs/: ARCHITECTURE.md  DATA_CONTRACT.md  DEMO_GUIDE.md  DESIGN_DECISIONS.md
examples/: pilbara-brief.md
lme_price_mcp/: __init__.py  server.py  service.py
mineral_pdf_mcp/: __init__.py  server.py  service.py
mining_news_mcp/: __init__.py  server.py  service.py
tests/: test_agent.py  test_cli.py  test_http.py  test_mcp_integration.py  test_news.py  test_pdf.py  test_price.py
