[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mining-rights-daily-agent"
version = "0.1.0"
description = "A three-server MCP agent that produces cited mining-rights daily briefs."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "feedparser>=6.0,<7",
  "httpx>=0.27,<1",
  "mcp>=1.27,<2",
  "openai>=1.68,<3",
  "pypdf>=5.3,<7",
  "python-dotenv>=1.2,<2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
  "types-beautifulsoup4>=4.12,<5",
]

[project.scripts]
mining-daily = "agent.__main__:main"
mining-news-mcp = "mining_news_mcp.server:main"
mineral-pdf-mcp = "mineral_pdf_mcp.server:main"
lme-price-mcp = "lme_price_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["agent", "common", "mining_news_mcp", "mineral_pdf_mcp", "lme_price_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.run]
branch = true
source = ["agent", "common", "mining_news_mcp", "mineral_pdf_mcp", "lme_price_mcp"]
omit = ["agent/__main__.py", "*/server.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
exclude = ["tests"]

[[tool.mypy.overrides]]
module = ["feedparser", "pypdf"]
ignore_missing_imports = true
